--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,8 +1,10 @@
 :root {
-    --brightPink:#c75ecd;
-    --white:#dde7e2;
-    --darkColor:#333940;
-    --highlightColor: #47cdb4;
+    --lightColor:#ceb888;
+    --white:#9d968d;
+    --darkColor:#000000;
+    --highlightColor: #c28e0e;
+    --lightColor30:#ceb8884d;
+    --lightColor60:#ceb88899;
 }
 * {
     font-family: Arial, Helvetica, sans-serif;
@@ -20,7 +22,7 @@ header p {
     margin-right:auto;
 }
 .colorText {
-    color: var(--brightPink)
+    color: var(--lightColor)
 }
 .whiteText {
     color: var(--white);
@@ -47,15 +49,15 @@ header p {
 .codeCard:hover,
 .codeCard:hover .cardHeader {
     box-shadow: inset 0px 0px 8px 
-        rgba(232, 102, 236, 1), 
+        var(--lightColor), 
         0 0 15px 
-        rgba(232, 102, 236, 1);
+        var(--lightColor);
 }
 
 .linear-gradient-background {
     background-image: linear-gradient(
-        rgba(232, 102, 236, 0.3) 0%,
-        rgba(232, 102, 236, 0.6) 100%
+        var(--lightColor30) 0%,
+        var(--lightColor60) 100%
     );
 }
 .snippetDescription {
