--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -45,6 +45,7 @@ header p {
     padding:15px;
     border-radius: 20px;
     margin:0 10px 10px 10px;
+    font-family: monospace;
 }
 .codeCard:hover,
 .codeCard:hover .cardHeader {
